# Email-Crawler

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  alembic.ini  dashboard.py  docker-compose.yml  framework.md  local.md  main.md  output.md  pyproject.toml  railway.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  tests.yml
.streamlit/: config.toml
app/: __init__.py
app/api/: main.py
app/api/routes/: health.py  jobs.py  results.py
app/config/: __init__.py  settings.py
app/crawler/: __init__.py  adaptive_crawler.py  base_crawler.py  http_crawler.py  ocr_crawler.py  pdf_crawler.py  playwright_crawler.py
app/extractors/: __init__.py  company_extractor.py  email_extractor.py  phone_extractor.py  social_extractor.py  technology_extractor.py
app/logging/: __init__.py  logger.py
app/models/: __init__.py  base.py  company.py  crawl_result.py  email.py
app/monitoring/: __init__.py  health.py  metrics.py
app/parsers/: __init__.py  html_parser.py  rss_parser.py  sitemap_parser.py
app/queue/: __init__.py  job.py  queue_manager.py
app/schemas/: __init__.py  company_schema.py  crawl_schema.py  email_schema.py
app/services/: __init__.py  confidence_engine.py  crawl_service.py  dedup_service.py  export_service.py  import_service.py  issue_detector.py  maps_resolver.py  orchestrator.py  summary_service.py
app/storage/: __init__.py  database.py
app/storage/repositories/: __init__.py  company_repo.py  email_repo.py
app/utils/: __init__.py  hash_utils.py  rate_limiter.py  retry.py  url_utils.py
app/validators/: __init__.py  domain_validator.py  email_validator.py  url_validator.py
app/workers/: __init__.py  crawl_worker.py  export_worker.py  validation_worker.py
docker/: Dockerfile  Dockerfile.worker
migrations/: env.py
migrations/versions/: 001_initial.py
sample_data/: broken_websites.csv  medium.csv  small.csv
scripts/: run_api.py  run_crawler.py  run_export.py  run_validator.py  run_worker.py
tests/: conftest.py  test_confidence_engine.py  test_crawler.py  test_dedup.py  test_email_extractor.py  test_email_validator.py  test_import_service.py
