[project]
name = "lead-intelligence-crawler"
version = "1.0.0"
description = "Enterprise Lead Intelligence & Email Discovery Engine"
requires-python = ">=3.12"

dependencies = [
    # HTTP / Async networking
    "httpx[http2]>=0.27.0",
    "anyio>=4.4.0",
    "aiodns>=3.2.0",

    # HTML parsing
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",

    # Browser automation (JS fallback)
    "playwright>=1.44.0",

    # PDF extraction
    "pymupdf>=1.24.5",

    # Email / phone utilities
    "phonenumbers>=8.13.39",
    "dnspython>=2.6.1",

    # Database (SQLite by default — zero setup local mode)
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.1",

    # API (used by the optional Docker/Queue mode, harmless locally)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",

    # Config / validation
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",

    # Logging
    "structlog>=24.2.0",

    # Utilities
    "tldextract>=5.1.2",
    "chardet>=5.2.0",
    "aiofiles>=23.2.1",
    "tenacity>=8.3.0",

    # Local dashboard
    "streamlit>=1.38.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
# Only needed for the Docker/Postgres "Queue Mode" (docker-compose up) —
# not required to run the local dashboard.
queue = [
    "asyncpg>=0.29.0",
    "redis>=5.0.4",
    "aioredis>=2.0.1",
]
# Only needed if you opt into the OpenAI summary-polish feature.
ai = [
    "openai>=1.40.0",
]
ocr = [
    "paddleocr>=2.7.3",
    "paddlepaddle>=2.6.1",
]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "httpx>=0.27.0",
    "ruff>=0.4.9",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "types-beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
